styles/project/updateSection.module.scss
@import '/app/common.module.scss';

.updateSection {
  @include flexCenter();
  flex-wrap: wrap;
  gap: 1vh 1vw;

  @media screen and (max-width: 600px) {
    gap: 2vw 2vw;
    padding: 1vh 1vw;
  }
}

.commitCard {
  width: 16vw;
  height: 20vh;
  border-radius: 15px;
  display: flex;
  flex-direction: column;

  h6 {
    color: $white;
  }

  p {
    margin: 0;
    color: $white2;
  }

  @media screen and (max-width: 600px) {
    width: 42.5vw;
    height: 20vh;

    h3 {
      font-size: 3vh;
    }

    p {
      font-size: 2vh;
    }
  }
}

.cardTop {
  background-color: $gray;
  height: 13.5vh;
  padding: 1vh 1vw;
  border-radius: 15px 15px 15px 0;

  @media screen and (max-width: 600px) {
    height: 15vh;
    padding: 1vh 1vw 0 3vw;
  }
}

.cardBottom {
  height: 4.5vh;
  display: flex;

  .buttonSpacer {
    width: 60%;
    height: 100%;
    margin-top: -0.5%;
    margin-right: -1.5%;
    background-color: $gray;
    border-radius: 0px 0px 20px 15px;

    @media screen and (max-width: 600px) {
      margin-right: -3.5%;
    }
  }

  .bottomButton {
    width: 45%;
    @include flexCenter(center);
    border-top-left-radius: 15px;

    .commitButton {
      background-color: $secondaryColor;
      border: none;
      border-radius: 10px;
      height: 90%;
      width: 90%;
      @include flexCenter();
      cursor: pointer;

      &:hover {
        background-color: $secondaryHoverColor;
      }

      @media screen and (max-width: 600px) {
        margin-top: 2%;
        height: 4vh;
      }
    }
  }
}

